--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,13 @@ trigger:
   branches:
     include:
     - master
+schedules:
+- cron: "0 17 * * Fri"
+  always: true
+  displayName: Weekly build
+  branches:
+    include:
+    - master
     
 stages:
 - stage: build
